src/tests/binary-operators/7.txt
binary-operators/7.c:2:7: error: invalid operands to comparison '>=' (have 'int' and 'float')
     5 >= 6.0;
       ^
